pkg/front_end/testcases/dot_shorthands/private_class/main.dart.strong.modular.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:9:8: Error: No type was provided to find the dot shorthand 'new'.
//   w = .new(); // Error.
//        ^^^
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:10:8: Error: No type was provided to find the dot shorthand 'new'.
//   w = .new; // Error.
//        ^^^
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:11:8: Error: No type was provided to find the dot shorthand 'getter'.
//   w = .getter; // Error.
//        ^^^^^^
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:12:8: Error: No type was provided to find the dot shorthand 'method'.
//   w = .method(); // Error.
//        ^^^^^^
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:13:8: Error: No type was provided to find the dot shorthand 'named'.
//   w = .named(); // Error.
//        ^^^^^
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:17:19: Error: No type was provided to find the dot shorthand 'new'.
//   constW = const .new(); // Error.
//                   ^^^
//
// pkg/front_end/testcases/dot_shorthands/private_class/main.dart:18:19: Error: No type was provided to find the dot shorthand 'named'.
//   constW = const .named(); // Error.
//                   ^^^^^
//
import self as self;
import "main_lib.dart" as mai;

import "org-dartlang-testcase:///main_lib.dart";

static method test() → void {
  mai::_C w = mai::v;
  w = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:9:8: Error: No type was provided to find the dot shorthand 'new'.
  w = .new(); // Error.
       ^^^" as{TypeError,ForDynamic} mai::_C;
  w = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:10:8: Error: No type was provided to find the dot shorthand 'new'.
  w = .new; // Error.
       ^^^" as{TypeError,ForDynamic} mai::_C;
  w = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:11:8: Error: No type was provided to find the dot shorthand 'getter'.
  w = .getter; // Error.
       ^^^^^^" as{TypeError,ForDynamic} mai::_C;
  w = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:12:8: Error: No type was provided to find the dot shorthand 'method'.
  w = .method(); // Error.
       ^^^^^^" as{TypeError,ForDynamic} mai::_C;
  w = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:13:8: Error: No type was provided to find the dot shorthand 'named'.
  w = .named(); // Error.
       ^^^^^" as{TypeError,ForDynamic} mai::_C;
  w = new mai::_C::•();
  mai::_Const constW = #C1;
  constW = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:17:19: Error: No type was provided to find the dot shorthand 'new'.
  constW = const .new(); // Error.
                  ^^^" as{TypeError,ForDynamic} mai::_Const;
  constW = invalid-expression "pkg/front_end/testcases/dot_shorthands/private_class/main.dart:18:19: Error: No type was provided to find the dot shorthand 'named'.
  constW = const .named(); // Error.
                  ^^^^^" as{TypeError,ForDynamic} mai::_Const;
  constW = #C1;
}

constants  {
  #C1 = mai::_Const {}
}


Constructor coverage from constants:
org-dartlang-testcase:///main.dart:
- _Const. (from org-dartlang-testcase:///main_lib.dart:16:9)
- Object. (from org-dartlang-sdk:///sdk/lib/core/object.dart)
